# SpreadFoundry

./: .gitignore  Cargo.toml  README.md
apps/SpreadFoundryMenubar/: Package.swift
apps/SpreadFoundryMenubar/Sources/SpreadFoundryMenubar/: CanarySnapshot.swift  ExecutionSnapshot.swift  MenuPanelBackground.swift  MenuRowIcon.swift  MenubarIcon.swift  MenubarMenuContent.swift  MenubarViewModel.swift  RootDirectory.swift  ScriptRunner.swift  SnapshotService.swift  SpreadFoundryMenubarApp.swift  StatusBarController.swift
candidates/: weekly_selector_canary.json
configs/: approved_strategy.json  nvda_opt.toml  nvda_put_spread.toml  nvda_ranker.toml
docs/: production_architecture.md  robinhood_mcp_live.md  tradier_live.md  weekly_selector_canary.md
scripts/: auto-research-loop.sh  auto-research-service.sh  canary-service.sh  check-terminology.sh  execution-service.sh  ivrv_overlay.py  live-market-engine-service.sh  menubar-service.sh  notify-ntfy.sh  refresh-canary-artifact.sh  refresh-live-signal.sh  run_canary_worker.sh  signal-refresh-loop.sh  signal-refresh-service.sh  spreadfoundry-service.sh
src/: broker.rs  execution.rs  fixture.rs  lib.rs  live_market.rs  live_signal.rs  main.rs  opt.rs  report.rs  research.rs  research_store.rs  sim.rs  strategy.rs  theta.rs  types.rs
tests/: optimization.rs  spread_math.rs  strategy_generation.rs  theta_urls.rs
