[package]
name = "spreadfoundry"
version = "0.1.0"
edition = "2024"

[lib]
name = "spreadfoundry"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
